alignment fixes

--- a/habits/src/App.css
+++ b/habits/src/App.css
@@ -67,8 +67,7 @@ input {
   border-radius: 3px;
   background: var(--textbox-bg);
   caret-color: var(--main-font-color-high-alpha);
-  border-width: 0.5px;
-  /* font-size: 16px; */
+  border-width: 1px;
 }
 
 input::placeholder {
@@ -403,7 +402,7 @@ input[type="checkbox"]:checked:hover {
 
 #inputBtn {
   padding: 2px 7px;
-  border: solid 0.5px var(--main-font-color-high-alpha);
+  border: solid 1px var(--main-font-color-high-alpha);
   border-radius: 3px;
   font-size: 0.75rem;
   color: var(--main-font-color-med-alpha);
@@ -636,14 +635,13 @@ input[type="checkbox"]:checked:hover {
 }
 
 #todoInput {
-  margin: 0;
-  padding: 5px;
+  padding: 4px 5px;
   display: flex;
   justify-content: center;
 }
 
 #todoInput > input:hover {
-  border: solid 0.5px var(--main-font-color);
+  border: solid 1px var(--main-font-color);
 }
 
 #todoInput > input {
@@ -701,8 +699,9 @@ input[type="checkbox"]:checked:hover {
 
 .categoryDropdown {
   position: relative;
+  padding: 2px 0;
   display: flex;
-  margin: 0 0 0 5px;
+  margin: 0 5px 0 5px;
   font-size: small;
   background-color: var(--main-bg-color);
   border-color: var(--main-font-color-high-alpha);
@@ -710,7 +709,7 @@ input[type="checkbox"]:checked:hover {
   width: var(--category-dropdown-width);
   max-width: var(--category-dropdown-width);
   cursor: pointer;
-  border: solid 0.5px var(--main-font-color-high-alpha);
+  border: solid 1px var(--main-font-color-high-alpha);
   overflow: hidden;
   text-overflow: ellipsis;
   text-wrap: nowrap;
